Completed the bottom arrow. Assignment complete

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="footer">
-                <div>
+                <div class="box">
                     <img class="lower-logo" src="img/down-arrow.png">
                 </div>
             </div>
